Use display:table-cell instead of float:left for tabbed areas to avoid wrapping
git-svn-id: https://svn.apache.org/repos/asf/lenya/trunk@595142 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/webapp/lenya/resources/css/tabs.css
+++ b/src/webapp/lenya/resources/css/tabs.css
@@ -22,7 +22,8 @@
   background-color: #F5F4E9; 
   color: black;
   border: solid 1px #CCCCCC;
-  float: left;
+  display: table-cell;
+  vertical-align: top;
   padding: 0 20px 20px 20px;
   min-height: 400px;
 }
@@ -39,7 +40,8 @@
 }
 
 .lenya-tabs {
-  float: left;
+  display: table-cell;
+  vertical-align: top;
   /* margin-top: 40px; */
 }
 
